--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@splinetool/react-spline": "^2.2.6",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
